// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Next/Tabs Compact 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ jjDtJl"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dYebPD StyledTabs-a4fwxl-2 jQLYpX sc-iWFSnp jSmGJQ sc-jLiVlK hCMpMg"
      role="tablist"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 dByFSU StyledTabs__StyledTabsHeader-a4fwxl-0 gwFYfs"
      >
        <button
          aria-expanded={true}
          aria-selected={true}
          className="StyledButton-sc-323bzc-0 cVSyty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="tab"
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 jELtUt StyledTab-sc-1nnwnsb-0 clUpab"
          >
            <span
              className="StyledText-sc-1sadyjn-0 ioTTOa"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-selected={false}
          className="StyledButton-sc-323bzc-0 cVSyty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="tab"
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cIZnmr"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-selected={false}
          className="StyledButton-sc-323bzc-0 cVSyty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="tab"
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cIZnmr"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-selected={false}
          className="StyledButton-sc-323bzc-0 cVSyty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="tab"
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cIZnmr"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-selected={false}
          className="StyledButton-sc-323bzc-0 cVSyty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="tab"
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cIZnmr"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded={false}
          aria-selected={false}
          className="StyledButton-sc-323bzc-0 cVSyty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="tab"
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cIZnmr"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        className="StyledTabs__StyledTabPanel-a4fwxl-1 ixxRXT"
        role="tabpanel"
      >
        <div
          className="sc-fKFyDc dToKui sc-bBXqnf iOjUUG"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Tabs Long tab names 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="StyledBox-sc-13pk1d4-0 dYebPD StyledTabs-a4fwxl-2 jQLYpX sc-iWFSnp hsQyeR sc-jLiVlK hCMpMg"
    role="tablist"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dByFSU StyledTabs__StyledTabsHeader-a4fwxl-0 gwFYfs"
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="StyledButton-sc-323bzc-0 cVSyty"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jELtUt StyledTab-sc-1nnwnsb-0 clUpab"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ioTTOa"
          >
            This is a very long tab name
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="StyledButton-sc-323bzc-0 cVSyty"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
        >
          <span
            className="StyledText-sc-1sadyjn-0 cIZnmr"
          >
            This is another very long tab name
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="StyledButton-sc-323bzc-0 cVSyty"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
        >
          <span
            className="StyledText-sc-1sadyjn-0 cIZnmr"
          >
            And this is a third very long tab name
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="This is a very long tab name Tab Contents"
      className="StyledTabs__StyledTabPanel-a4fwxl-1 ixxRXT"
      role="tabpanel"
    >
      <div
        className="sc-fKFyDc dToKui sc-bBXqnf iOjUUG"
      >
        Here is tab #1
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Tabs Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="StyledBox-sc-13pk1d4-0 dYebPD StyledTabs-a4fwxl-2 jQLYpX sc-iWFSnp hsQyeR sc-jLiVlK hCMpMg"
    role="tablist"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dByFSU StyledTabs__StyledTabsHeader-a4fwxl-0 gwFYfs"
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="StyledButton-sc-323bzc-0 cVSyty"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jELtUt StyledTab-sc-1nnwnsb-0 clUpab"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ioTTOa"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="StyledButton-sc-323bzc-0 cVSyty"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
        >
          <span
            className="StyledText-sc-1sadyjn-0 cIZnmr"
          >
            Tab 2
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="StyledButton-sc-323bzc-0 cVSyty"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 enMbdp StyledTab-sc-1nnwnsb-0 clUpab"
        >
          <span
            className="StyledText-sc-1sadyjn-0 cIZnmr"
          >
            Tab 3
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      className="StyledTabs__StyledTabPanel-a4fwxl-1 ixxRXT"
      role="tabpanel"
    >
      <div
        className="sc-fKFyDc dToKui sc-bBXqnf iOjUUG"
      >
        Here is tab #1
      </div>
    </div>
  </div>
</div>
`;
